Verif/Test/Invalide/test_erreur_3.96-2.deca
// Description:
//    Programme soulevant l'erreur (3.96)
// Resultats:
//    Erreur contextuelle
//    Ligne 19 : Nombre de paramètres incorrect (règle 3.96)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x() {
   }

   void y()
   A a;
   {
      a = a.x(1);
   }   
}
